more tweaks to side bars. fixed extra padding on "what is pathway" site.

--- a/styles/_pf-section.scss
+++ b/styles/_pf-section.scss
@@ -23,6 +23,10 @@ $page_header_logo_position: $page_header_logo_width + $page_header_logo_offset;
 		padding-left: $page_header_logo_position;
 	}
 	
+	&.no-icon {
+		padding-left: 0 !important;
+	}
+	
 	img {
 		left: 0 !important;
 		top: 6% !important;
@@ -32,6 +36,9 @@ $page_header_logo_position: $page_header_logo_width + $page_header_logo_offset;
 .pf-section {
 	@media (min-width: 480px) {
 		padding-left: $page_header_logo_position;
+	}
+	&.no-icon{
+		padding-left: 0 !important;
 	}
 	
 	a {color:$red;}
